--- a/project/package.json
+++ b/project/package.json
@@ -14,7 +14,8 @@
     "react-helmet-async": "1.3.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "toastify": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
