--- a/project/package.json
+++ b/project/package.json
@@ -15,7 +15,7 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
-    "toastify": "^2.0.1"
+    "react-toastify": "^9.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
